Build 37
- Added Rearming Deck building
- Added Rift Creator building (without weapon)
- Unit class changed to support multiple parts
- Bullet animation fixed

Build 36 (20.04.2013)
- Added Air Defense Site building & weapon
- Added Repair Station & added ability to fix non human units
- Added Civilian Vertical Bridge
- Added player start position
- Added Temporal Gate building and all related mouse cursors
- Added ability to teleport units through Temporal Gate
- Game grid changed, now it's works as in original game
- Added ability to create tactical groups (hold Ctrl button and press 0-9 button)
- Different bugfixes

Build 35 (11.04.2013)
- Minimap not available if player have low energy
- Added Exterminator unit and PolyAcid weapon
- Unit sound system now have much flexible structure 
- Added "Hover" movement mode
- Added Vertical Bridge
- Completely recreated animation system
- Added damage explosions for all buildings
- Added sound for building explosion

Build 34 (21.03.2013)
- Changed the way building are constructed and sold. Now it's works exactly as in original game
- Added broken state for all buildings
- Added ability to fix buildings
- Unit heal speed corrected
- Added ability to create building with weapon
- Added Plasma Turret building & GatPlasma weapon
- Added Neutron Accelerator building & NeutronAss weapon

Build 33 (12.03.2013)
- Added Bion unit & Plasma Rifle weapon
- Fixed building upgrade bug
- Destroyed building leaves crater on land
- Building of Camera tower and bridges now not require Construction Rig destruction
- All bridge problems are solved
- Complete recreation of unit producing system
- Different small bugs fixed

Build 32 (06.03.2013)
- Units now can die and buildings now can be destroyed
- Added explosion effects for existing units
- Few attacking bugs fixed
- Field Hospital now can heal units

Build 31 (26.02.2013)
- Added mouse panning. It disabled by default, in order to enable it, go to "Special" tab