@@ -55,6 +55,7 @@
 		<script type="text/javascript" src="js/units/abstract.js"></script>
 		<script type="text/javascript" src="js/units/construction_rig.js"></script>
 		<script type="text/javascript" src="js/units/freighter.js"></script>
+		<script type="text/javascript" src="js/units/hover_freighter.js"></script>
 		<script type="text/javascript" src="js/units/guardian.js"></script>
 		<script type="text/javascript" src="js/units/bion.js"></script>
 		<script type="text/javascript" src="js/units/exterminator.js"></script>
