@@ -2387,9 +2387,9 @@ function Level1()
 		game.players[PLAYER_HUMAN] = new Player('#ffffbb');
 		game.players[PLAYER_COMPUTER1] = new Player('#fc3c58');
 		
-		AbstractUnit.createNew(GuardianUnit, 63, 4, PLAYER_HUMAN, true);
-		AbstractUnit.createNew(ExterminatorUnit, 66, 4, PLAYER_HUMAN, true);
-//		AbstractUnit.createNew(ConstructionRigUnit, 64, 6, PLAYER_HUMAN, true);
+		AbstractUnit.createNew(ConstructionRigUnit, 63, 4, PLAYER_HUMAN, true);
+		AbstractUnit.createNew(ConstructionRigUnit, 66, 4, PLAYER_HUMAN, true);
+		AbstractUnit.createNew(ConstructionRigUnit, 64, 6, PLAYER_HUMAN, true);
 		
 		AbstractBuilding.createNew(WaterWellBuilding, 72, 1, PLAYER_NEUTRAL, true);
 		AbstractBuilding.createNew(WaterWellBuilding, 17, 25, PLAYER_NEUTRAL, true);
@@ -2408,7 +2408,10 @@ function Level1()
 	
 	this.getAvailableUnits = function()
 	{
-		return [ConstructionRigUnit, FreighterUnit, GuardianUnit, BionUnit, ExterminatorUnit];
+		return [
+			ConstructionRigUnit, FreighterUnit, HoverFreighterUnit, 
+			GuardianUnit, BionUnit, ExterminatorUnit
+		];
 	};
 	
 	this.getAvailableBuildings = function()
